@@ -1,4 +1,5 @@
 20010409
+ - (stevesk) use setresgid() for setegid() if needed
  - (stevesk) configure.in: typo
  - OpenBSD CVS Sync
    - stevesk@cvs.openbsd.org 2001/04/08 16:01:36
@@ -4965,4 +4966,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1086 2001/04/08 22:50:44 stevesk Exp $
+$Id: ChangeLog,v 1.1087 2001/04/09 14:50:52 stevesk Exp $
